--- a/themes/2021/layouts/index.html
+++ b/themes/2021/layouts/index.html
@@ -32,7 +32,7 @@
                         {{ .Title }}
                     </a>
                     <span class="text-black-50 fs-6">
-                        {{ .Date }}
+                        {{ time.Format "2006-01-02" .Date }}
                     </span>
 
                 </h3>
