--- a/themes/2021/layouts/_default/list.html
+++ b/themes/2021/layouts/_default/list.html
@@ -21,8 +21,9 @@
                 {{ .Title }}
             </a>
             <span class="text-black-50 fs-6">
-                {{ .Date }}
-            </span>
+                        {{ time.Format "2006-01-02" .Date }}
+                    </span>
+
 
         </h3>
         <section style="min-height: 1rem;" class="text-truncate">
