border bottom for theme

--- a/themes/2021/layouts/_default/single.html
+++ b/themes/2021/layouts/_default/single.html
@@ -5,7 +5,7 @@
     {{ $burl := .Site.BaseURL }}
 
     <article class="bg-light shadow-sm round col p-3 pt-5 my-3" style="min-height: 150px;">
-        <h3 class="fs-6 text-truncate">
+        <h3 class="fs-6 text-truncate border-bottom">
             <span class="fs-6">
                 {{ $burl := .Site.BaseURL }}
                 {{ range .Params.categories }}
