--- a/themes/2021/layouts/index.html
+++ b/themes/2021/layouts/index.html
@@ -18,7 +18,7 @@
             {{ with $paginator }}
             {{ range $paginator.Pages }}
             <article class="bg-light shadow-sm round col-6 p-3 pt-5 my-3" style="height: 150px;">
-                <h3 class="fs-6 text-truncate">
+                <h3 class="fs-6 text-truncate border-bottom">
                     <span class="fs-6">
                         {{ $burl := .Site.BaseURL }}
                         {{ range .Params.categories }}
