github markdown css

--- a/themes/2021/layouts/_default/single.html
+++ b/themes/2021/layouts/_default/single.html
@@ -23,7 +23,7 @@
 
 
         </h3>
-        <section style="min-height: 1rem;">
+        <section class="markdown-body" style="min-height: 1rem;">
             {{ .Content }}
         </section>
 
