--- a/themes/2021/layouts/partials/footer.html
+++ b/themes/2021/layouts/partials/footer.html
@@ -6,7 +6,7 @@
         </address>
     </p>
     <div class="row">
-        <section class="col-6">
+        <section class="col-4">
             <h2>カテゴリ一覧</h2>
         <ul class="list-group list-group-horizontal">
             {{- range $termName, $entries := .Site.Taxonomies.categories }}
@@ -15,7 +15,7 @@
                 {{- end }}
         </ul>
         </section>
-        <section class="col-6">
+        <section class="col-4">
             <h2>タグ一覧</h2>
 
         <ul class="list-group list-group-horizontal">
@@ -25,7 +25,16 @@
                 {{- end }}
         </ul>
         </section>
-        
+        <section class="col-4">
+            <h2>ハイライト一覧</h2>
+
+        <ul class="list-group list-group-horizontal">
+            {{- range $termName, $entries := .Site.Taxonomies.keywords }}
+            <li class="list-group-item"><a href="{{ "/keywords/" | relLangURL }}{{ $termName | urlize
+                    }}">{{ $termName }}</a> ({{ $entries.Count }})
+                {{- end }}
+        </ul>
+        </section>
     </div>
     
     
