--- a/themes/2021/layouts/partials/footer.html
+++ b/themes/2021/layouts/partials/footer.html
@@ -8,7 +8,7 @@
     <div class="row">
         <section class="col-4">
             <h2>カテゴリ一覧</h2>
-        <ul class="list-group list-group-horizontal">
+        <ul class="list-group">
             {{- range $termName, $entries := .Site.Taxonomies.categories }}
             <li class="list-group-item"><a href="{{ "/categories/" | relLangURL }}{{ $termName | urlize
                     }}">{{ $termName }}</a> ({{ $entries.Count }})
@@ -18,7 +18,7 @@
         <section class="col-4">
             <h2>タグ一覧</h2>
 
-        <ul class="list-group list-group-horizontal">
+        <ul class="list-group">
             {{- range $termName, $entries := .Site.Taxonomies.tags }}
             <li class="list-group-item"><a href="{{ "/tags/" | relLangURL }}{{ $termName | urlize
                     }}">{{ $termName }}</a> ({{ $entries.Count }})
@@ -26,9 +26,9 @@
         </ul>
         </section>
         <section class="col-4">
-            <h2>ハイライト一覧</h2>
+            <h2>キーワード一覧</h2>
 
-        <ul class="list-group list-group-horizontal">
+        <ul class="list-group">
             {{- range $termName, $entries := .Site.Taxonomies.keywords }}
             <li class="list-group-item"><a href="{{ "/keywords/" | relLangURL }}{{ $termName | urlize
                     }}">{{ $termName }}</a> ({{ $entries.Count }})
