--- a/themes/2021/layouts/partials/footer.html
+++ b/themes/2021/layouts/partials/footer.html
@@ -8,19 +8,19 @@
     <div class="row">
         <section class="col-4">
             <h2>カテゴリ一覧</h2>
-        <ul class="list-group">
+        <div>
             {{- range $termName, $entries := .Site.Taxonomies.categories }}
-            <li class="list-group-item"><a href="{{ "/categories/" | relLangURL }}{{ $termName | urlize
+            <a href="{{ "/categories/" | relLangURL }}{{ $termName | urlize
                     }}">{{ $termName }}</a> ({{ $entries.Count }})
                 {{- end }}
-        </ul>
+                </div>
         </section>
         <section class="col-4">
             <h2>タグ一覧</h2>
 
-        <ul class="list-group">
+        <div>
             {{- range $termName, $entries := .Site.Taxonomies.tags }}
-            <li class="list-group-item"><a href="{{ "/tags/" | relLangURL }}{{ $termName | urlize
+            <a href="{{ "/tags/" | relLangURL }}{{ $termName | urlize
                     }}">{{ $termName }}</a> ({{ $entries.Count }})
                 {{- end }}
         </ul>
@@ -28,12 +28,12 @@
         <section class="col-4">
             <h2>キーワード一覧</h2>
 
-        <ul class="list-group">
+        <div>
             {{- range $termName, $entries := .Site.Taxonomies.keywords }}
-            <li class="list-group-item"><a href="{{ "/keywords/" | relLangURL }}{{ $termName | urlize
+            <a href="{{ "/keywords/" | relLangURL }}{{ $termName | urlize
                     }}">{{ $termName }}</a> ({{ $entries.Count }})
                 {{- end }}
-        </ul>
+                </div>
         </section>
     </div>
     
